--- a/style.css
+++ b/style.css
@@ -6,45 +6,96 @@
 }
 
 *{
-    font-family: poppins;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-.heading{
-    text-align: center;
-    font-size: 44px;
-    color: #e5e5e5;
-}
-
-body{
-    background-color: #1E2436;
-}
-
-.links-container{
-    text-align: left;
-}
-
-.recipe-list a{
+a{
     text-decoration: none;
 }
 
-.recipe-list a:link{
-    color: #fff;
+body{
+    font-family: poppins;
+    background-color: #D1EF53;
 }
 
-.recipe-list a:visited{
-    color: #fff;
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 32px;
 }
 
-.recipe-list a:hover{
-    color: #aadd80;
+.header{
+    background-color: #020000;
+    padding: 20px 0;
 }
 
-.recipe-list{
-    display: inline-block;
-    list-style-type: none;
-    font-size: 36px;
+.header .container{
+    display: flex;
+    justify-content: center;
+    font-size: 32px;
+    color: #f5f6ee;
 }
 
-.recipe-list-item{
-    margin-bottom: 20px;
+.header .container .logo{
+    flex-shrink: 0;
+}
+
+.heading .container{
+    display: flex;
+    font-size: 26px;
+    color: #020000;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+.heading .container p{
+    border-bottom: 2px solid #020000;
+}
+
+.cards .container{
+    display: flex;
+    padding: 16px 32px;
+    justify-content: center;
+    color: #020000;
+    gap: 10px;
+}
+
+.card {
+    width: 400px;
+    background-color: #f5f6ee;
+    border-radius: 16px;
+}
+
+.card:hover{
+    border: 2px solid rgba(#F2F4F8, 0);
+    box-shadow: 0 20px 20px rgba(0,0,0,.05), 0 0 20px rgba(0,0,0,.1);
+    transition: ease-in-out .1s;
+}
+
+.card img{
+    width: 100%;
+    border-radius: 16px 16px 0 0;
+}
+
+.card p{
+    color: #020000;
+    padding: 10px;
+    font-size: 24px;
+}
+
+@media(max-width:768px){
+    .cards .container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .heading .container p{
+        text-align: center;
+    }
+
+    .card {
+        width: 300px;
+    }
 }
