--- a/recipe-style.css
+++ b/recipe-style.css
@@ -1,55 +1,126 @@
 @font-face {
     font-family: poppins;
     src: url(./fonts/Poppins-Regular.ttf);
-    font-style: normal;
-    font-weight: 100;
 }
 
 *{
-    font-family: poppins;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body{
-    background-color: #1E2436;
-    margin: 0;
+    font-family: poppins;
+    background-color: #D1EF53;
 }
 
-.recipe-name, .recipe-description-heading, .recipe-ingredients-heading, .recipe-instruction-heading{
-    color: #aadd80;
-    font-size: 30px;
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 32px;
 }
 
-.recipe-container h1{
-    margin: 0;
-    border-bottom: 1px solid #fff;
-    padding-bottom: 3px;
-    font-size: 40px;
+.header{
+    background-color: #020000;
+    padding: 20px 0;
 }
 
-.recipe-container{
+.header .container{
     display: flex;
-    justify-content: space-between;
-    padding: 40px;
+    align-items: center;
+    font-size: 32px;
+    color: #f5f6ee;
 }
 
-.recipe-image{
-    max-width: 50vw;
-    max-height: 50vh;
-    border: 2px solid #fff;
-    border-radius: 10px;
+.header .container p{
+    padding-bottom: 8px;
+    border-bottom: 2px solid #f5f6ee;
+}
+
+.recipe-info .container{
+    display: flex;
+    margin-top: 32px;
+    padding: 20px;
+    gap: 10px;
+}
+
+.recipe-info .container img{
+    width: 600px;
+    height: auto;
+    border-radius: 16px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
+}
+
+.recipe-info .container div p{
+    background-color: #020000;
+    padding: 12px;
+    border-radius: 16px;
+    color: #f5f6ee;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
+    font-size: 18px;
+}
+
+.recipe-details .container{
+    display: flex;
+    padding: 20px;
+    gap: 10px;
+}
+
+.recipe-details .container .instructions{
+    flex: 2;
+    background-color: #020000;
+    color: #f5f6ee;
+    padding: 32px;
+    border-radius: 16px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
 
 }
 
-.text-box{
-    margin-right: 15px;
-    color: #fff;
+.recipe-details .container .instructions p{
+    font-size: 28px;
+    border-bottom: 2px solid #f5f6ee;
+    margin-bottom: 16px;
 }
 
-.recipe-description-text, .recipe-ingredients-list, .recipe-instruction-list{
-    font-size: 24px;
+.recipe-details .container .instructions ul li{
+    font-size: 18px;
 }
 
+.recipe-details .container .ingredients{
+    flex: 1;
+    background-color: #020000;
+    color: #f5f6ee;
+    padding: 32px;
+    border-radius: 16px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
 
+}
+
+.recipe-details .container .ingredients p{
+    font-size: 28px;
+    border-bottom: 2px solid #f5f6ee;
+    margin-bottom: 16px;
+}
+
+.recipe-details .container .ingredients ul li{
+    font-size: 18px;
+}
+
+@media(max-width:900px){
+    .recipe-info .container{
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+    }
+
+    .recipe-info .container img{
+        width: 350px;
+    }
+
+    .recipe-details .container{
+        flex-direction: column;
+    }
+}
 
 
 
